--- a/src/components/style.css
+++ b/src/components/style.css
@@ -18,8 +18,8 @@
   width: 10%;
 }
 
-.header .user > i,
-.header .cart > i {
+.header .user>i,
+.header .cart>i {
   font-size: 2rem;
   color: #737071;
 }
@@ -64,7 +64,7 @@
   width: calc(100% - 200px);
 }
 
-.header .controls .search > i {
+.header .controls .search>i {
   position: absolute;
   top: 15px;
   right: 18px;
@@ -81,21 +81,54 @@
   background: var(--secondaryBG);
 }
 
+.main {
+  width: 100%;
+  max-width: 1400px;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
+  max-width: 1400px;
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
   justify-content: center;
   align-items: center;
   max-height: 500px;
+  min-width: 100%;
+  height: 500px;
+  border-radius: var(--borderRadius);
+
 }
 
 .swiper-slide img {
-  object-fit: cover;
+  object-fit: fill;
+  width: 100%;
+  max-height: 500px;
+  height: 100%;
   border-radius: var(--borderRadius);
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  bottom: 10px !important;
+  top: 95% !important;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  width: 50px !important;
+  height: 50px !important;
+  color: white !important;
+  border-radius: 50% !important;
+  /* background: var(--primaryColor); */
+}
+
+.swiper-button-prev {
+  left: 5px !important;
+}
+
+.swiper-button-next {
+  right: 5px !important;
 }
